@@ -150,3 +150,5 @@
 2017-02-22 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented button enable logic in 'src/rdlogeditb/editlogdialog.cpp'
 	and 'src/rdlogeditb/editlogdialog.h'.
+2017-02-22 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented the 'Cut', 'Copy' and 'Paste' buttons.
